--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -63,3 +63,13 @@
 .spacer {
   flex: 1 1 auto;
 }
+.spacer {
+  flex: 1 1 auto;
+}
+
+.welcome {
+  margin-right: 1rem;
+  font-weight: 500;
+  font-size: 16px;
+}
+
