fix: Errors fixation

--- a/src/app/features/accounts/account-details/account-details.component.scss
+++ b/src/app/features/accounts/account-details/account-details.component.scss
@@ -62,3 +62,11 @@
   color: #777;
   padding: 16px;
 }
+.error-text {
+  color: #d32f2f;
+  font-weight: 600;
+  text-align: center;
+  margin: 20px 0;
+  font-size: 16px;
+}
+
