--- a/src/app/features/accounts/account-details/account-details.component.html
+++ b/src/app/features/accounts/account-details/account-details.component.html
@@ -1,4 +1,10 @@
+
+<div *ngIf="errorMessage" class="error-text">
+  {{ errorMessage }}
+</div>
 <div class="account-details-container" *ngIf="!loading && account">
+
+  
   <!-- Account Header Card -->
   <mat-card class="account-header-card">
     <mat-card-title>Account Details</mat-card-title>
