--- a/src/app/features/customers/customer-create/customer-create.component.html
+++ b/src/app/features/customers/customer-create/customer-create.component.html
@@ -8,23 +8,35 @@
 
     <mat-card-content>
       <form [formGroup]="form" (ngSubmit)="submit()">
-        <mat-form-field appearance="outline" class="full-width">
+        <mat-form-field appearance="outline" class="full-width"  color="warn">
           <mat-label>First Name</mat-label>
-          <input matInput formControlName="firstName" placeholder="John">
+          <input matInput formControlName="firstName" placeholder="John"  color="warn">
+          <mat-error *ngIf="form.get('firstName')?.touched && form.get('firstName')?.hasError('required')">
+            First Name is required
+          </mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="full-width">
+        <mat-form-field appearance="outline" class="full-width"  color="warn">
           <mat-label>Last Name</mat-label>
           <input matInput formControlName="lastName" placeholder="Doe">
+          <mat-error *ngIf="form.get('lastName')?.touched && form.get('lastName')?.hasError('required')">
+            Last Name is required
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="full-width">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email" placeholder="john.doe@email.com">
+          <mat-error *ngIf="form.get('email')?.touched && form.get('email')?.hasError('required')">
+            Email is required
+          </mat-error>
+          <mat-error *ngIf="form.get('email')?.touched && form.get('email')?.hasError('email')">
+            Please enter a valid email
+          </mat-error>
         </mat-form-field>
 
         <div class="actions">
-          <button mat-flat-button color="primary" [disabled]="loading">Create Customer</button>
+          <button type="submit" mat-flat-button color="primary" [disabled]="loading">Create Customer</button>
         </div>
       </form>
     </mat-card-content>
