--- a/src/app/features/customers/customer-create/customer-create.component.scss
+++ b/src/app/features/customers/customer-create/customer-create.component.scss
@@ -24,6 +24,7 @@
   .full-width {
     width: 100%;
     margin-bottom: 15px;
+    
   }
 
   .actions {
@@ -31,10 +32,22 @@
     justify-content: flex-end;
   }
 
+ ::ng-deep .mat-error {
+  color: #f44336 !important;
+  font-weight: 500;
+ }
+
+
+
   .status-message {
     margin-top: 15px;
     text-align: center;
     color: #444;
     font-size: 14px;
   }
+}
+.error-text {
+  color: #d32f2f;
+  margin-top: 10px;
+  font-weight: 500;
 }
