--- a/src/app/pages/summary/summary.component.html
+++ b/src/app/pages/summary/summary.component.html
@@ -69,7 +69,7 @@
                 <td>{{ tx.createdAt | date:'short' }}</td>
                 <td>
                   <button mat-icon-button color="warn"
-                    (click)="deleteTransaction(account.accountId, tx.transactionId)">
+                    (click)="deleteTransaction(account.accountId, tx.TransactionId)">
                     <mat-icon>delete</mat-icon>
                   </button>
                 </td>
